--- a/colab/chap22.ipynb
+++ b/colab/chap22.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter xx"
+    "# Chapter 22"
    ]
   },
   {
@@ -1100,11 +1100,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "baseball_drag = pd.read_csv('data/baseball_drag.csv')\n",
+    "import os\n",
+    "\n",
+    "filename = 'baseball_drag.csv'\n",
+    "\n",
+    "if not os.path.exists(filename):\n",
+    "    !wget https://raw.githubusercontent.com/AllenDowney/ModSimPy/master/data/baseball_drag.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "baseball_drag = pd.read_csv(filename)\n",
     "mph = Quantity(baseball_drag['Velocity in mph'], UNITS.mph)\n",
     "mps = mph.to(m/s)\n",
     "baseball_drag.index = magnitude(mps)\n",
@@ -1121,29 +1135,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "C_d = drag_interp(43 * m / s)"
+    "# Solution goes here"
    ]
   },
   {
@@ -1161,7 +1157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "C_d = drag_interp(43 * m / s)"
    ]
   },
   {
@@ -1220,6 +1216,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1242,7 +1256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
