--- a/jupyter/chap05.ipynb
+++ b/jupyter/chap05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "manual-spirit",
+   "id": "virtual-fireplace",
    "metadata": {},
    "source": [
     "# Chapter 5"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intimate-lambda",
+   "id": "valid-islam",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "respected-auditor",
+   "id": "driven-transcript",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "motivated-cleaner",
+   "id": "imposed-israel",
    "metadata": {},
    "source": [
     "In this chapter..."
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "modern-holder",
+   "id": "handmade-direction",
    "metadata": {},
    "source": [
     "# World population\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lyric-norwegian",
+   "id": "guilty-kenya",
    "metadata": {},
    "source": [
     "## World Population Data\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sharp-study",
+   "id": "raised-calendar",
    "metadata": {},
    "source": [
     "The following cell downloads a copy of https://en.wikipedia.org/wiki/World_population_estimates"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "false-future",
+   "id": "thrown-violence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tender-ethics",
+   "id": "representative-canal",
    "metadata": {},
    "source": [
     "To read this data, we will use Pandas, which provides functions for\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "rising-trader",
+   "id": "lined-footage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "higher-warner",
+   "id": "amber-batman",
    "metadata": {},
    "source": [
     "Now we can use it like this:"
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "emerging-clause",
+   "id": "authentic-singer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recovered-philadelphia",
+   "id": "julian-intranet",
    "metadata": {},
    "source": [
     "The arguments are:\n",
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "judicial-samba",
+   "id": "recreational-albania",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ethical-proportion",
+   "id": "postal-breeding",
    "metadata": {},
    "source": [
     "This line selects the third table (numbered 2), which contains\n",
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "superior-colombia",
+   "id": "conservative-investigation",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collectible-chapter",
+   "id": "adolescent-password",
    "metadata": {},
    "source": [
     "The first column, which is labeled `Year`, is special.  It is the **index** for this `DataFrame`, which means it contains the labels for the rows.\n",
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "illegal-hollow",
+   "id": "naughty-macintosh",
    "metadata": {},
    "source": [
     "The column labels are long strings, which makes them hard to work with.\n",
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "interim-trouble",
+   "id": "suspected-integer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intense-mileage",
+   "id": "about-mistress",
    "metadata": {},
    "source": [
     "Now we can select a column from the `DataFrame` using the dot operator,\n",
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "resident-engineer",
+   "id": "cleared-protection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "disciplinary-advocacy",
+   "id": "rational-sweden",
    "metadata": {},
    "source": [
     "The result is a Pandas `Series`, which is similar to the `TimeSeries` and `SweepSeries` objects we've been using.\n",
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "african-calvin",
+   "id": "portable-knowing",
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "waiting-stack",
+   "id": "contemporary-telephone",
    "metadata": {},
    "source": [
     "The left column is the **index** of the `Series`; in this example it contains the dates.\n",
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ruled-hearing",
+   "id": "revolutionary-prescription",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incoming-summit",
+   "id": "cleared-institution",
    "metadata": {},
    "source": [
     "The most recent estimate we have from the U.N. is for 2015, so the value for 2016 is `NaN`.\n",
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "marine-sudan",
+   "id": "sharp-woman",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "czech-fitness",
+   "id": "detected-evidence",
    "metadata": {},
    "source": [
     "The keyword argument `style=':'` specifies a dotted line; `style='--'` specifies a dashed line.\n",
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adolescent-graduate",
+   "id": "afraid-patio",
    "metadata": {},
    "source": [
     "## Absolute and relative errors\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "resident-matthew",
+   "id": "norwegian-spank",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "resident-bonus",
+   "id": "married-account",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "removed-friendly",
+   "id": "polyphonic-agency",
    "metadata": {},
    "source": [
     "When you subtract two `Series` objects, the result is a new `Series`.\n",
@@ -654,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "executive-luxury",
+   "id": "british-dayton",
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "empty-kuwait",
+   "id": "spectacular-distance",
    "metadata": {},
    "source": [
     "On average, the estimates differ by about 0.029 billion.\n",
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "wicked-paste",
+   "id": "administrative-store",
    "metadata": {
     "scrolled": true
    },
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vulnerable-olympus",
+   "id": "saved-smell",
    "metadata": {},
    "source": [
     "In the worst case, they differ by about 0.1 billion.\n",
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "negative-championship",
+   "id": "embedded-procurement",
    "metadata": {
     "scrolled": true
    },
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supposed-canberra",
+   "id": "geographic-ordering",
    "metadata": {},
    "source": [
     "I multiplied by 100 so we can interpret the results as a percentage.  In 2015, the difference between the estimates is about 1.4%, and that happens to be the maximum.\n",
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "statutory-leadership",
+   "id": "compressed-survivor",
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fluid-syria",
+   "id": "statistical-violence",
    "metadata": {},
    "source": [
     "The mean relative error is about 0.6%.\n",
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "confident-people",
+   "id": "insured-swing",
    "metadata": {},
    "source": [
     "## Modeling Population Growth\n",
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "afraid-tennessee",
+   "id": "absent-minimum",
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "trained-canyon",
+   "id": "cooked-beast",
    "metadata": {},
    "source": [
     "So we can get the total growth during the interval like this:"
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "artistic-suicide",
+   "id": "historic-buddy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "advisory-mortality",
+   "id": "sufficient-oracle",
    "metadata": {},
    "source": [
     "The numbers in brackets are called **labels**, because they label the\n",
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "authorized-rough",
+   "id": "focused-maryland",
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "concerned-belgium",
+   "id": "special-fireplace",
    "metadata": {},
    "source": [
     "So `t_0` is the label of the first element, which is 1950.\n",
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "forced-trunk",
+   "id": "employed-commission",
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "driving-humor",
+   "id": "supreme-finder",
    "metadata": {},
    "source": [
     "The value `-1` indicates the last element; `-2` indicates the second to last element, and so on.\n",
@@ -937,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "vocal-weather",
+   "id": "critical-carrier",
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accurate-interaction",
+   "id": "difficult-banks",
    "metadata": {},
    "source": [
     "Now we can use `t_0` and `t_end` to select the population at the beginning and end of the interval."
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "finnish-sentence",
+   "id": "executive-pressure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "looking-board",
+   "id": "unnecessary-pontiac",
    "metadata": {},
    "source": [
     "And compute the total growth during the interval."
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "viral-indian",
+   "id": "classical-proportion",
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "active-pierce",
+   "id": "acknowledged-tenant",
    "metadata": {},
    "source": [
     "Finally, we can compute average annual growth."
@@ -1016,7 +1016,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "vietnamese-adrian",
+   "id": "double-short",
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "occupied-indiana",
+   "id": "compound-linux",
    "metadata": {},
    "source": [
     "From 1950 to 2016, world population grew by about 0.07 billion people per year, on average.\n",
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "underlying-oliver",
+   "id": "moved-spotlight",
    "metadata": {},
    "source": [
     "## Simulation\n",
@@ -1059,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "opposed-above",
+   "id": "imperial-gardening",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "motivated-point",
+   "id": "virgin-network",
    "metadata": {},
    "source": [
     "In this example, I use the keyword arguments `time` and `quantity` to give names to the index and the values.\n",
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "architectural-techno",
+   "id": "suburban-deficit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "absent-anthony",
+   "id": "checked-neutral",
    "metadata": {},
    "source": [
     "Here's what it looks like so far."
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "every-arkansas",
+   "id": "defensive-fifty",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "diagnostic-testimony",
+   "id": "economic-profession",
    "metadata": {},
    "source": [
     "Now we set the rest of the values by simulating annual growth:"
@@ -1168,7 +1168,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "dedicated-system",
+   "id": "upset-amsterdam",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "classical-uncertainty",
+   "id": "underlying-biology",
    "metadata": {},
    "source": [
     "The values of `t` go from from `t_0` to `t_end`, including the first but not the last.\n",
@@ -1193,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "trained-canvas",
+   "id": "experimental-investigation",
    "metadata": {},
    "outputs": [
     {
@@ -1223,17 +1223,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opening-fabric",
+   "id": "younger-abuse",
    "metadata": {},
    "source": [
-    "The keyword argument `color='gray'` specifies the color of the line.\n",
+    "The keyword argument `color='gray'` specifies the color of the line.  For details on color specification see <https://modsimpy.com/color>.\n",
     "\n",
-    "From 1950 to 1990, the model does not fit the data particularly well; after that, it's pretty good."
+    "From 1950 to 1990, the model does not fit the data particularly well, but after that, it's pretty good."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "portuguese-party",
+   "id": "similar-characterization",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "terminal-house",
+   "id": "equivalent-louis",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "gross-puzzle",
+   "id": "excessive-cream",
    "metadata": {},
    "source": [
     "Here's the code from this chapter all in one place."
@@ -1272,7 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "binding-monitoring",
+   "id": "foreign-support",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1296,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "another-concentration",
+   "id": "inner-harvest",
    "metadata": {},
    "outputs": [
     {
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fiscal-edwards",
+   "id": "narrative-state",
    "metadata": {},
    "source": [
     "**Exercise:**  Try fitting the model using data from 1970 to the present, and see if that does a better job.\n",
@@ -1339,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "spanish-number",
+   "id": "happy-empire",
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "optimum-material",
+   "id": "tutorial-fundamentals",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1389,7 +1389,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "formal-shade",
+   "id": "beautiful-harvest",
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "close-villa",
+   "id": "liberal-escape",
    "metadata": {},
    "outputs": [],
    "source": []
